<resources>
    <string name="app_name">presentation</string>
    <string name="nickname_title">아이디 : </string>
    <string name="github_url_title">github 주소 : </string>
    <string name="hint_search_user">github 유저를 검색해주세요</string>
    <string name="search">검색</string>
    <string name="repository_url_title">레포지토리 주소 : </string>
    <string name="repo_name_title">레포지토리 이름 : </string>
    <string name="repo_star_count_title">레포 별점 수 : </string>
    <string name="empty_view_string">데이터 가져오는 중..</string>
</resources>