<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="thisFragment"
            type="com.example.presentation.fragment.UserFragment" />

        <variable
            name="mainViewModel"
            type="com.example.presentation.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_search_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_search_user"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:searchOption="@{()-> thisFragment.searchUserClickEvent()}" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:onClick="@{()-> thisFragment.searchUserClickEvent()}"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="@+id/edit_search_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_search_user"
            app:layout_constraintTop_toTopOf="@+id/edit_search_user" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_search_user"
            bind:addList="@{mainViewModel.searchedUsersList}" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#ffff"
            android:gravity="center"
            android:text="@string/empty_view_string"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_search_user"
            bind:visibility="@{mainViewModel.searchedUsersList}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>