<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_background_border"
    android:padding="10dp">


    <TextView
        android:id="@+id/tv_rep_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/repo_name_title"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rep_name_title"
        app:layout_constraintStart_toEndOf="@+id/tv_rep_name_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        tools:text="realzier12" />

    <TextView
        android:id="@+id/tv_repo_url_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/repository_url_title"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rep_name_title" />

    <TextView
        android:id="@+id/tv_repo_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="#2196F3"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repo_url_title"
        app:layout_constraintStart_toEndOf="@+id/tv_repo_url_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_name"
        app:layout_constraintVertical_bias="1"
        tools:text="https://github.com/realizer12" />

    <TextView
        android:id="@+id/tv_star_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/tv_star_count_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_url_title"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_star_count_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/repo_star_count_title"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_url_title" />


</androidx.constraintlayout.widget.ConstraintLayout>